Increased nova and neutron db sync timeouts.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,8 +1,3 @@
 ---
-apt::sources:
-  'puppetlabs':
-    location: 'http://apt.puppetlabs.com'
-    repos: 'main'
-    key:
-      id: '6F6B15509CF8E59E6E469F327F438280EF8D349F'
-      server: 'pgp.mit.edu'
+nova::db::sync::db_sync_timeout: 700
+neutron::db::sync::db_sync_timeout: 700
